--- a/client/src/app/modules/administrator/inmueble/inmueble-creator/inmueble-creator.component.html
+++ b/client/src/app/modules/administrator/inmueble/inmueble-creator/inmueble-creator.component.html
@@ -35,7 +35,7 @@
       <div class="row">
 
         <div class="input-field col s6">
-          <select class="browser-default" formControlName="departmentId">
+          <select class="browser-default" formControlName="departmentId" (change)="getListCityxDepartment()">
             <option value="">DEPARTAMENTO</option>
             <option *ngFor="let c of departments" value="{{c.id}}">{{c.name}}</option>
           </select>
