--- a/client/src/app/modules/administrator/inmueble/inmueble-creator/inmueble-creator.component.html
+++ b/client/src/app/modules/administrator/inmueble/inmueble-creator/inmueble-creator.component.html
@@ -1,7 +1,7 @@
 <br />
 <div class="container section ">
   <div class="row ">
-    <form [formGroup]="frmValidator" class="col s12">
+    <form [formGroup]="frmValidator" (ngSubmit)="SaveInmueble()" class="col s12">
       <br>
       <h4 class="aviso">DATOS DEL AVISO</h4>
 
@@ -104,7 +104,7 @@
 
       <div class="row">
         <div class="input-field col s6">
-          <select class="browser-default" formControlName="NumeroBaños">
+          <select class="browser-default" formControlName="NumeroBanos">
             <option value="">NÚMERO DE BAÑOS</option>
             <option value="B1">1</option>
             <option value="B2">2</option>
@@ -127,7 +127,9 @@
       <h4 class="aviso">CARACTERÍSTICAS</h4>
 
       <div class="row">
-        <textarea name="textarea" rows="10" cols="50">Write something here</textarea>
+        <label>
+          <textarea name="textarea" rows="10" cols="50" formControlName="Descripcion">Write something here</textarea>
+        </label>
       </div>
 
 
@@ -139,24 +141,20 @@
 
       <div class="row">
 
-        <span  class="input-group-text upload"  (click)="upload()"  id="btnUpload">Upload</span>
+        <span class="input-group-text upload" (click)="uploadas()" id="btnUpload">Upload</span>
 
         <input (change)="fileChange($event)" type="file" class="custom-file-input" id="inputGroupFile01"
           aria-describedby="inputGroupFileAddon01">
 
 
       </div>
-
-
-
-
-
-
-
-
-
-
-
+      <div class="row">
+        <div class="col s12">
+          <button class="btn waves-effect waves-light" type="submit" name="action">Save
+            <i class="material-icons right">send</i>
+          </button>
+        </div>
+      </div>
 
     </form>
   </div>
