--- a/client/src/app/modules/administrator/inmueble/inmueble-list/inmueble-list.component.html
+++ b/client/src/app/modules/administrator/inmueble/inmueble-list/inmueble-list.component.html
@@ -1,1 +1,75 @@
-<p>inmueble-list works!</p>
+<br />
+<a routerLink="/inmueble/creator" class="waves-effect waves-light btn">New Register</a>
+<br />
+<br />
+
+<table class="responsive-table">
+    <thead>
+        <tr>
+            <th>
+                Tipo de Oferta
+            </th>
+            <th>
+                Tipo de inmuble
+            </th>
+            <th>
+                Departamento
+            </th>
+            <th>
+                Ciudad
+            </th>
+            <th>
+                Dirección 
+            </th>
+            <th>
+                Precio 
+            </th>
+            <th>
+                Estrato 
+            </th>
+            <th>
+                Area 
+            </th>
+
+            
+
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let c of inmuebles | paginate: { itemsPerPage: 8, currentPage: p }">
+            <td>
+                {{c.Area}}
+            </td>
+            <td>
+                {{c.Estrato}}
+            </td>
+            <td>
+                {{c.departmentName}}
+            </td>
+            <td>
+                <a routerLink="/inmueble/editor/{{c.id}}" class="waves-effect waves-light btn orange">Edit
+                    <i class="material-icons right">edit</i>
+                </a>
+            </td>
+            <td>
+                <button class="btn waves-effect waves-light red" type="button" name="action"
+                    (click)="openConfirmation(c.id)">Delete
+                    <i class="material-icons right">delete</i>
+                </button>
+            </td>
+        </tr>
+    </tbody>
+</table>
+<pagination-controls (pageChange)="p = $event"></pagination-controls>
+
+<div id="modalConfirmation" class="modal">
+    <div class="modal-content">
+        <h4>Confirmation Window</h4>
+        <p>Do you confirm remove this element?</p>
+    </div>
+    <div class="modal-footer">
+        <a class="modal-close waves-effect waves-green btn red">Cancel</a> &nbsp;
+        <a class="modal-close waves-effect waves-green btn green" (click)="DeleteCity()">Confirm</a>
+
+    </div>
+</div>
