--- a/client/src/app/modules/parameters/city/city-editor/city-editor.component.html
+++ b/client/src/app/modules/parameters/city/city-editor/city-editor.component.html
@@ -1,6 +1,6 @@
 <br />
 
-<div class="row">
+<div class="row container">
     <form [formGroup]="frmValidator" (ngSubmit)="UpdateCity()" class="col s12">
         <div class="row">
             <div class="input-field col s2">
