--- a/client/src/app/modules/parameters/city/city-list/city-list.component.html
+++ b/client/src/app/modules/parameters/city/city-list/city-list.component.html
@@ -1,9 +1,9 @@
 <br />
-<a routerLink="/city/creator" class="waves-effect waves-light btn">New Register</a>
+<a  style=" margin-left: 78%;"  routerLink="/city/creator" class="waves-effect waves-light btn">New Register</a>
 <br />
 <br />
 
-<table class="responsive-table">
+<table style=" margin-left: 18%;"  class="responsive-table container">
     <thead>
         <tr>
             <th>
@@ -48,7 +48,7 @@
         </tr>
     </tbody>
 </table>
-<pagination-controls (pageChange)="p = $event"></pagination-controls>
+<pagination-controls class="center" (pageChange)="p = $event"></pagination-controls>
 
 <div id="modalConfirmation" class="modal">
     <div class="modal-content">
