--- a/client/src/app/modules/parameters/department/department-editor/department-editor.component.html
+++ b/client/src/app/modules/parameters/department/department-editor/department-editor.component.html
@@ -1,5 +1,5 @@
 <br />
-<div class="row">
+<div class="row container">
     <form [formGroup]="frmValidator" (ngSubmit)= "UpdateDepartment()" class="col s12">
         <div class="row">
             <div class="input-field col s3">
