--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <app-hero></app-hero>
 
-<div class="container">
+<div>
     <router-outlet>
     </router-outlet>
 </div>
