--- a/client/src/app/modules/administrator/inmueble/inmueble-editor/inmueble-editor.component.html
+++ b/client/src/app/modules/administrator/inmueble/inmueble-editor/inmueble-editor.component.html
@@ -1,1 +1,162 @@
-<p>inmueble-editor works!</p>
+<br />
+<div class="container section ">
+  <div class="row ">
+    <form [formGroup]="frmValidator" (ngSubmit)="UpdateInmueble()" class="col s12">
+      <br>
+      <h4 class="aviso">DATOS DEL AVISO</h4>
+
+      <div class="row">
+        <div class="input-field col s6">
+          <select class="browser-default" formControlName="TipoOferta">
+            <option value="">TIPO DE OFERTA</option>
+            <option value="VENTA">VENTA</option>
+            <option value="ARRIENDO">ARRIENDO</option>
+          </select>
+
+        </div>
+
+        <div class="input-field col s6">
+          <select class="browser-default" formControlName="TipoInmueble">
+            <option value="">TIPO DE INMUEBLE</option>
+            <option value="APARTAMENTO">APARTAMENTO</option>
+            <option value="CASA">CASA</option>
+            <option value="APARTAESTUDIO">APARTAESTUDIO</option>
+            <option value="OFICINA">OFICINA</option>
+            <option value="HABITACION">HABITACION</option>
+            <option value="APARTAESTUDIO">APARTAESTUDIO</option>
+            <option value="CASALOTE">CASA LOTE</option>
+          </select>
+        </div>
+
+
+      </div>
+
+      <h4 class="aviso">UBICACIÓN DEL INMUEBLE</h4>
+      <div class="row">
+
+        <div class="input-field col s6">
+          <select class="browser-default" formControlName="departmentId" (change)="getListCityxDepartment()">
+            <option value="">DEPARTAMENTO</option>
+            <option *ngFor="let c of departments" value="{{c.id}}">{{c.name}}</option>
+          </select>
+        </div>
+
+        <div class="input-field col s6">
+          <select class="browser-default" formControlName="cityId">
+            <option value="">CIUDAD</option>
+            <option *ngFor="let c of cities" value="{{c.id}}">{{c.name}}</option>
+          </select>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="input-field col s6">
+          <input id="barrio" formControlName="Barrio" type="text" class="validate">
+          <label for="barrio" class="active">BARRIO</label>
+        </div>
+
+        <div class="input-field col s6">
+          <input id="direccion" formControlName="Direccion" type="text" class="validate">
+          <label for="direccion" class="active">DIRECCIÓN</label>
+        </div>
+
+      </div>
+
+      <h4 class="aviso">DESCRIPCIÓN DEL INMUEBLE</h4>
+      <!-- APELLIDOS-->
+      <div class="row">
+        <div class="input-field col s6">
+          <input id="precio" formControlName="Precio" type="text" class="validate">
+          <label for="precio" class="active">PRECIO</label>
+        </div>
+
+        <div class="input-field col s6">
+          <select class="browser-default" formControlName="Estrato">
+            <option value="">ESTRATO</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s6">
+          <input id="area" formControlName="Area" type="text" class="validate">
+          <label for="area" class="active">AREA</label>
+        </div>
+
+
+        <div class="input-field col s6">
+          <select class="browser-default" formControlName="NumeroHabitaciones">
+            <option value="">NÚMERO DE HABITACIONES</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s6">
+          <select class="browser-default" formControlName="NumeroBanos">
+            <option value="">NÚMERO DE BAÑOS</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+          </select>
+
+        </div>
+
+        <div class="input-field col s6">
+          <select class="browser-default" formControlName="EstadoInmueble">
+            <option value="">ESTADO EL INMUEBLE</option>
+            <option value="BUENO">BUENO</option>
+            <option value="EXCELENTE">EXCELENTE</option>
+            <option value="REMODELADO">REMODELADO</option>
+          </select>
+        </div>
+      </div>
+
+      <h4 class="aviso">CARACTERÍSTICAS</h4>
+
+      <div class="row">
+        <label>
+          <textarea name="textarea" rows="10" cols="50" formControlName="Descripcion">Write something here</textarea>
+        </label>
+      </div>
+
+
+
+      <h4 class="aviso">FOTOGRAFÍAS DEL ANUNCIO</h4>
+
+
+      <!-- SUBIR IMAGEN-->
+
+      <div class="row">
+
+        <span class="input-group-text upload" (click)="uploadas()" id="btnUpload">Upload</span>
+
+        <input (change)="fileChange($event)" type="file"  class="custom-file-input" id="inputGroupFile01"
+          aria-describedby="inputGroupFileAddon01">
+
+
+      </div>
+      <div class="row">
+        <div class="col s12">
+          <button class="btn waves-effect waves-light" type="submit" name="action">Save
+            <i class="material-icons right">send</i>
+          </button>
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
+<br />
