--- a/client/src/app/modules/parameters/department/department-creator/department-creator.component.html
+++ b/client/src/app/modules/parameters/department/department-creator/department-creator.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row container">
     <form [formGroup]="frmValidator" (ngSubmit)="SaveDepartment()" class="col s12">
         <div class="row">
             <div class="input-field col s3">
