--- a/client/src/app/modules/parameters/department/department-list/department-list.component.html
+++ b/client/src/app/modules/parameters/department/department-list/department-list.component.html
@@ -1,11 +1,11 @@
 <br />
 <br />
-<a routerLink="/department/creator" class="waves-effect waves-light btn">New Register</a>
+<a  style=" margin-left: 75%;" routerLink="/department/creator" class="waves-effect waves-light btn">New Register</a>
 <br />
 <br />
 
 
-<table class="responsive-table">
+<table style=" margin-left: 20%;" class="responsive-table container">
     <thead>
         <tr>
             <th scope="col">
@@ -44,7 +44,7 @@
         </tr>
     </tbody>
 </table>
-<pagination-controls (pageChange)="p = $event"></pagination-controls>
+<pagination-controls class="center" (pageChange)="p = $event" ></pagination-controls>
 
 <div id="modalConfirmation" class="modal">
     <div class="modal-content">
