--- a/client/src/app/public/home/home.component.html
+++ b/client/src/app/public/home/home.component.html
@@ -1,95 +1,25 @@
-<div class="container section">
-    <br>
-    <div class="row">
-      <div class="col s4">
-        <div class="card ">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="assets/images/D.jpg">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Description<i
-                class="material-icons right">more_vert</i></span>
-          </div>
-          <div class="card-reveal brown">
-            <span class="card-title grey-text text-darken-4">Description<i class="material-icons right">close</i></span>
-            <p>HogarColombia is a company dedicated to the sale and leasing of real estate.</p>
-          </div>
-        </div>
+<br />
+<br />
+<div class="row">
+  <div style="float: left; margin-right: 3%;margin-left: 70px;" class="card col s3 " *ngFor="let c of inmuebles | paginate: { itemsPerPage: 8, currentPage: p }">
+      <div class="card-image">
+          <img src="http://localhost:3000/api/containers/imagen/download/{{c.Imagen}}" width="100" height="300">
+          <span class="card-title">{{c.TipoOferta}} - {{c.TipoInmueble}}</span>
       </div>
-  
-      <div class="col s4 ">
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="assets/images/M.jpg">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Mission<i
-                class="material-icons right">more_vert</i></span>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Mission<i class="material-icons right">close</i></span>
-            <p>Our mission is to provide a customer-based real estate rental and sale service. Since it is essential for
-              us that the client is satisfied with his choice, we do not focus clearly on him and his comfort.</p>
-          </div>
-        </div>
+      <div class="card-content">
+          <span>{{c.departmentName}} - {{c.cityName}} </span><br>
+          <span>Barrio: {{c.Barrio}} - Direccion : {{c.Direccion}}</span><br>
+          <span>Precio : {{c.Precio}} - Estrato : {{c.Estrato}}</span><br>
+          <span>Area: {{c.Area}} - Numero de Habitaciones : {{c.NumeroHabitaciones}}</span><br>
+          <span>Numero Baños : {{c.NumeroBanos}} - Estado : {{c.EstadoInmueble}}</span><br>
+          <p> {{c.Descripcion}}</p>
       </div>
-  
-      <div class="col s4">
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="assets/images/V.jpg">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Vision<i
-                class="material-icons right">more_vert</i></span>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Vision<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          </div>
-        </div>
+      <div class="card-action">
+          <a (click)="openConfirmation(c.id)" class="right">DELETE</a>&nbsp;
+          <a routerLink="/inmueble/editor/{{c.id}}" class="right">EDIT</a>
       </div>
-    </div>
-  
-    <div class="divider"></div>
-    <br>
-  
-    <div class="row">
-  
-      <h5 class="center">Available Houses</h5>
-  
-      <div class="slider col s12 ">
-        <ul class="slides ">
-          <li>
-            <img src="assets/images/1.jpg"> <!-- random image -->
-            <div class="caption center-align">
-              <h3>This is our big Tagline!</h3>
-              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-            </div>
-          </li>
-          <li>
-            <img src="assets/images/2.jpg"> <!-- random image -->
-            <div class="caption left-align">
-              <h3>Left Aligned Caption</h3>
-              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-            </div>
-          </li>
-          <li>
-            <img src="assets/images/3.jpg"> <!-- random image -->
-            <div class="caption right-align">
-              <h3>Right Aligned Caption</h3>
-              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-            </div>
-          </li>
-          <li>
-            <img src="assets/images/4.jpg"> <!-- random image -->
-            <div class="caption center-align">
-              <h3>This is our big Tagline!</h3>
-              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
+  </div> &nbsp;
+</div>
+
+<pagination-controls  class="center" (pageChange)="p = $event"></pagination-controls>
   
