--- a/client/src/app/modules/administrator/inmueble/inmueble-creator/inmueble-creator.component.html
+++ b/client/src/app/modules/administrator/inmueble/inmueble-creator/inmueble-creator.component.html
@@ -139,7 +139,7 @@
 
       <div class="row">
 
-        <span  class="input-group-text upload"  (click)="upload()"  id="btnUpload">Upload</span>
+        <button  class="input-group-text upload"  (click)="upload()"  id="btnUpload">Upload</button>
 
         <input (change)="fileChange($event)" type="file" class="custom-file-input" id="inputGroupFile01"
           aria-describedby="inputGroupFileAddon01">
