--- a/client/src/app/public/master-page/navbar/navbar.component.html
+++ b/client/src/app/public/master-page/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         <i *ngIf="userLogged"class="material-icons right">account_circle</i></a></li>
       <li *ngIf="!userLogged "><a routerLink="/security/login"><h5>Login</h5></a></li>
       <li *ngIf="userLogged"><a routerLink="/security/logout">Logout</a></li>
-      <li *ngIf="userLogged && rol==0" ><a routerLink="/department/list">Department</a></li>
+      <li *ngIf="userLogged" ><a routerLink="/department/list">Department</a></li>
       <li *ngIf="userLogged"><a routerLink="/city/list">Ciudad</a></li>
       <li *ngIf="userLogged"><a routerLink="/inmueble/list">Inmueble</a></li>
     </ul>
