--- a/client/src/app/modules/administrator/inmueble/inmueble-view/inmueble-view.component.html
+++ b/client/src/app/modules/administrator/inmueble/inmueble-view/inmueble-view.component.html
@@ -14,5 +14,5 @@
         <span>Numero Baños: {{c.NumeroBanos}} - Estado: {{c.EstadoInmueble}}</span><br>
         <p> {{c.Descripcion}}</p>
     </div>
-    <a style="margin-left: 65%;" class="waves-effect waves-light btn">Solicitar</a>
+    <a style="margin-left: 65%;" class="waves-effect waves-light btn"  (click)="SaveSolicitud()">Solicitar</a>
 </div>
