--- a/client/src/app/public/master-page/hero/hero.component.html
+++ b/client/src/app/public/master-page/hero/hero.component.html
@@ -1,8 +1,5 @@
-<section class="hero">
+<section style="margin-top: 5%;" class="hero">
   <div class="hero-inner">
-    <h1>¡El detalle está en</h1>
-    <h2>NUESTRAS CASAS!</h2>
-    <!--<a routerLink="/home" class="btn blue">Hotels</a> &nbsp;&nbsp;
-        <a routerLink="/security/login" class="btn blue">Login!</a>-->
+    
   </div>
 </section>
