--- a/client/src/app/modules/administrator/solicitud/solicitud-list/solicitud-list.component.html
+++ b/client/src/app/modules/administrator/solicitud/solicitud-list/solicitud-list.component.html
@@ -18,6 +18,12 @@
             <th>
                 Dirección
             </th>
+            <th>
+                Estado
+            </th>
+            <th>
+                Estudiar
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -36,6 +42,19 @@
             </td>
             <td>
                 {{c.Direccion}}
+            </td>
+            <td>
+                {{c.Estado}}
+            </td>
+            <td *ngIf ="c.Estado ==  'enviado'">
+                <button  class="btn waves-effect waves-light blue" type="button" name="action"
+                    (click)="UpdateSolicitud(c.id)">Estudio
+                </button> 
+            </td>
+            <td *ngIf ="c.Estado !=  'enviado'">
+                <button  class="btn waves-effect waves-light green" type="button" name="action"
+                   routerLink="/solicitud/decision/{{c.id}}" >Decisión
+                </button> 
             </td>
         </tr>
     </tbody>
