--- a/client/src/app/modules/client/mis-solicitudes/mis-solicitudes-list/mis-solicitudes-list.component.html
+++ b/client/src/app/modules/client/mis-solicitudes/mis-solicitudes-list/mis-solicitudes-list.component.html
@@ -1,9 +1,9 @@
 <br />
 <br />
-<table style=" margin-left: 18%;"  class="responsive-table container">
+<table style=" margin-left: 15%;" class="responsive-table container">
     <thead>
         <tr>
-            
+
             <th>
                 Imagen
             </th>
@@ -28,12 +28,15 @@
             <th>
                 Estado
             </th>
+            <th>
+                Función
+            </th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let c of solicitudes | paginate: { itemsPerPage: 8, currentPage: p }">
             <td>
-                <img  id="myImg" src="http://localhost:3000/api/containers/imagen/download/{{c.Imagen}}" alt="Snow" width="100" height="150" style="width:100%; max-width: 300px">
+                <img id="myImg" src="http://localhost:3000/api/containers/imagen/download/{{c.Imagen}}" width="150" height="150">
             </td>
             <td>
                 {{c.Direccion}}
@@ -56,6 +59,22 @@
             <td>
                 {{c.Estado}}
             </td>
+            <td *ngIf="c.Estado ==  'enviado'">
+                <button class="btn waves-effect waves-light red" type="button" name="action"
+                    (click)="openConfirmation(c.id)">Delete
+                    <i class="material-icons right">delete</i>
+                </button>
+            </td>
+            <th *ngIf="c.Estado !=  'enviado'">
+                <button class="btn waves-effect waves-light blue" type="button" name="action"
+                    (click)="Detalles(c.id)">Detalles
+                </button>
+            </th>
+            <td *ngIf="c.Estado == 'aceptada-co-deudor'">
+                <button class="btn waves-effect waves-light green" type="button" name="action"
+                    routerLink="/MisSolicitudes/codeudor">Doc codeudor
+                </button>
+            </td>
         </tr>
     </tbody>
 </table>
@@ -70,10 +89,4 @@
         <a class="modal-close waves-effect waves-green btn red">Cancel</a> &nbsp;
         <a class="modal-close waves-effect waves-green btn green" (click)="DeleteCity()">Confirm</a>
     </div>
-</div>
-
-<div id = "myModal" class="modal">
-    <span class="close">& times;</span>
-    <img class="modal-content" id="img01">
-    <div id="caption"></div>
 </div>
