--- a/client/src/app/modules/adviser/adviser-list/adviser-list.component.html
+++ b/client/src/app/modules/adviser/adviser-list/adviser-list.component.html
@@ -42,6 +42,7 @@
                     <p *ngIf="u.status==true">Aceptado</p>
                     <p *ngIf="u.status==false">Rechazado</p>
             </td>
+           
             <td>
                 <a routerLink="/adviser/editor/{{u.id}}" class="waves-effect waves-light btn orange">Edit
                     <i class="material-icons right">edit</i>
@@ -53,6 +54,7 @@
                     <i class="material-icons right">delete</i>
                 </button>
             </td>
+           <td><p *ngIf="users.lenght==undefined">Gonorrea</p></td> 
         </tr>
     </tbody>
 </table>
