--- a/client/src/app/modules/client/mis-solicitudes/mis-solicitudes-list/mis-solicitudes-list.component.html
+++ b/client/src/app/modules/client/mis-solicitudes/mis-solicitudes-list/mis-solicitudes-list.component.html
@@ -72,7 +72,7 @@
             </th>
             <td *ngIf="c.Estado == 'aceptada-co-deudor'">
                 <button class="btn waves-effect waves-light green" type="button" name="action"
-                    routerLink="/MisSolicitudes/codeudor">Doc codeudor
+                    routerLink="/MisSolicitudes/codeudor/{{c.id}}">Doc 
                 </button>
             </td>
         </tr>
