--- a/client/src/app/modules/client/mis-solicitudes/codeudor/codeudor.component.html
+++ b/client/src/app/modules/client/mis-solicitudes/codeudor/codeudor.component.html
@@ -1,1 +1,50 @@
-<p>codeudor works!</p>
+<br>
+<div style="margin-left: 23%;" id="login-page" class="row container">
+    <div class="col s10 z-depth-6 card-panel">
+        <div class="row">
+            <form [formGroup]="frmValidator" (ngSubmit) = "SaveCodeudor()" class="col s12">
+                <br>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="nombre" formControlName="Nombre" type="text" class="validate">
+                        <label for="nombre">Nombre</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="apellido" formControlName="Apellido" type="text" class="validate">
+                        <label for="apellido">Apellido</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="cedula" formControlName="Cedula" type="text" class="validate">
+                        <label for="cedula">Cedula</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="telefono" formControlName="Telefono" type="text" class="validate">
+                        <label for="telefono">Telefono</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div style="margin-left: 16%;" class="input-field col s7">
+                        <input id="email" formControlName="Correo" type="email" class="validate">
+                        <label for="email">Correo</label>
+                    </div>
+                </div>
+
+
+                <button class="input-group-text upload blue btn" (click)="upload()"
+                    id="btnUpload">Upload</button>&nbsp;&nbsp;
+
+                <input style="margin-left: 16%;" (change)=" fileChange($event)" type="file" class="custom-file-input"
+                    id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+
+                <br /> 
+                <br />    
+                <button  class="btn waves-effect waves-light"
+                    style="margin-left: 38%;" type="submit" name="action">Submit
+                    <i class="material-icons right">send</i>
+                </button>
+            </form>
+        </div>
+    </div>
+</div>
